[gd_scene load_steps=13 format=2]

[ext_resource path="res://graphics/gui/yin_yang_frame.png" type="Texture" id=1]
[ext_resource path="res://fonts/Talk_to_three_headed_monkey.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://graphics/gui/hearts.svg" type="Texture" id=3]
[ext_resource path="res://scenes/gui/Yang.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/YinYangUI.gd" type="Script" id=5]
[ext_resource path="res://scenes/gui/Bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://graphics/gui/chakra.svg" type="Texture" id=7]
[ext_resource path="res://graphics/gui/chakra_empty.svg" type="Texture" id=8]
[ext_resource path="res://scenes/gui/Yin.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/DropSlot.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100.673, 65.7447 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="YinYangUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Bottom" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 400.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="MarginContainer" parent="Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 55.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="HBoxContainer" parent="Bottom/Action"]
margin_right = 1200.0
margin_bottom = 220.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Left" type="MarginContainer" parent="Bottom/Action/Box"]
margin_right = 486.0
margin_bottom = 220.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Grid" type="GridContainer" parent="Bottom/Action/Box/Left"]
margin_left = 10.0
margin_right = 476.0
margin_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 220 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Yin" parent="Bottom/Action/Box/Left/Grid" instance=ExtResource( 9 )]
targetName = "YinTarget"
attack = 3
cost = 4

[node name="Yin2" parent="Bottom/Action/Box/Left/Grid" instance=ExtResource( 9 )]
margin_left = 138.0
margin_right = 272.0
targetName = "YinTarget"
attack = 1
defense = 3
cost = 3

[node name="Yin3" parent="Bottom/Action/Box/Left/Grid" instance=ExtResource( 9 )]
margin_left = 276.0
margin_right = 410.0
targetName = "YinTarget"
attack = 2
defense = 1
cost = 2

[node name="Yin4" parent="Bottom/Action/Box/Left/Grid" instance=ExtResource( 9 )]
margin_top = 91.0
margin_bottom = 178.0
targetName = "YinTarget"
attack = 1
defense = 2
cost = 2

[node name="Yin5" parent="Bottom/Action/Box/Left/Grid" instance=ExtResource( 9 )]
margin_left = 138.0
margin_top = 91.0
margin_right = 272.0
margin_bottom = 178.0
targetName = "YinTarget"
defense = 4
cost = 3

[node name="Center" type="MarginContainer" parent="Bottom/Action/Box"]
show_behind_parent = true
margin_left = 490.0
margin_right = 710.0
margin_bottom = 220.0
rect_min_size = Vector2( 220, 220 )
mouse_filter = 2
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Control" type="Control" parent="Bottom/Action/Box/Center"]
show_behind_parent = true
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 210.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Top" type="ReferenceRect" parent="Bottom/Action/Box/Center/Control"]
show_behind_parent = true
margin_right = 200.0
margin_bottom = 130.0
rect_min_size = Vector2( 200, 130 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YinSlot" type="Area2D" parent="Bottom/Action/Box/Center/Control/Top" groups=[
"YinTarget",
]]
position = Vector2( 100, 67 )
gravity = 0.0
monitoring = false
script = ExtResource( 10 )

[node name="Shape" type="CollisionShape2D" parent="Bottom/Action/Box/Center/Control/Top/YinSlot"]
shape = SubResource( 1 )

[node name="Bottom" type="ReferenceRect" parent="Bottom/Action/Box/Center/Control"]
show_behind_parent = true
margin_top = 69.9153
margin_right = 200.0
margin_bottom = 199.915
rect_min_size = Vector2( 200, 130 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YangSlot" type="Area2D" parent="Bottom/Action/Box/Center/Control/Bottom" groups=[
"YangTarget",
]]
position = Vector2( 100, 67 )
gravity = 0.0
monitoring = false
script = ExtResource( 10 )

[node name="Shape" type="CollisionShape2D" parent="Bottom/Action/Box/Center/Control/Bottom/YangSlot"]
shape = SubResource( 1 )

[node name="Frame" type="TextureRect" parent="Bottom/Action/Box/Center/Control"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = -60.0
margin_bottom = -60.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 100, 100 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="MarginContainer" parent="Bottom/Action/Box"]
margin_left = 714.0
margin_right = 1200.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 70

[node name="Grid" type="GridContainer" parent="Bottom/Action/Box/Right"]
margin_left = 70.0
margin_right = 486.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 220 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Yang" parent="Bottom/Action/Box/Right/Grid" instance=ExtResource( 4 )]
targetName = "YangTarget"
movement = 2
speed = 3
cost = 3

[node name="Yang2" parent="Bottom/Action/Box/Right/Grid" instance=ExtResource( 4 )]
margin_left = 138.0
margin_right = 272.0
targetName = "YangTarget"
movement = 1
speed = 4
cost = 3

[node name="Yang3" parent="Bottom/Action/Box/Right/Grid" instance=ExtResource( 4 )]
margin_left = 276.0
margin_right = 410.0
targetName = "YangTarget"
movement = 2
speed = 2
cost = 2

[node name="Yang4" parent="Bottom/Action/Box/Right/Grid" instance=ExtResource( 4 )]
margin_top = 91.0
margin_bottom = 178.0
targetName = "YangTarget"
movement = 1
speed = 1
cost = 1

[node name="Yang5" parent="Bottom/Action/Box/Right/Grid" instance=ExtResource( 4 )]
margin_left = 138.0
margin_top = 91.0
margin_right = 272.0
margin_bottom = 178.0
targetName = "YangTarget"
speed = 3
cost = 2

[node name="Energy" parent="Bottom" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 472.0
filledTexture = ExtResource( 7 )
emptyTexture = ExtResource( 8 )

[node name="Health" parent="Bottom" instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -472.0
margin_right = 0.0
filledTexture = ExtResource( 3 )
current_value = 10

[node name="AcceptTurn" type="Button" parent="Bottom"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -107.0
margin_right = 108.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "Play Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -22.5
margin_bottom = 21.5
size_flags_horizontal = 3
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="dropped_node" from="Bottom/Action/Box/Center/Control/Top/YinSlot" to="." method="_on_YinSlot_dropped_node"]
[connection signal="removed_node" from="Bottom/Action/Box/Center/Control/Top/YinSlot" to="." method="_on_YinSlot_removed_node"]
[connection signal="dropped_node" from="Bottom/Action/Box/Center/Control/Bottom/YangSlot" to="." method="_on_YangSlot_dropped_node"]
[connection signal="removed_node" from="Bottom/Action/Box/Center/Control/Bottom/YangSlot" to="." method="_on_YangSlot_removed_node"]
[connection signal="pressed" from="Bottom/AcceptTurn" to="." method="_on_AcceptTurn_pressed"]
